--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,8 +24,11 @@ jobs:
         run: pip install -r requirements.txt
 
       - name: Run tests
-        run: pytest -q --maxfail=1
+        run: PYTHONPATH=. pytest -q --maxfail=1
 
+
+      
+ 
       - name: SonarQube scan
         uses: sonarsource/sonarqube-scan-action@v2
         env:
