--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectKey=sonarefactor_sonarfactor
-sonar.organization=sonarefactor
+sonar.projectKey=akRAMd9_SonaRefactor-Bot
+sonar.organization=akramd9
 sonar.sources=src
 sonar.tests=tests
 sonar.python.version=3.12
