--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,10 +13,9 @@ jobs:
   build-test-scan:
     runs-on: ubuntu-latest
     steps:
-      # ⬇️ fetch full history + all refs, not shallow
       - uses: actions/checkout@v4
         with:
-          fetch-depth: 0
+          fetch-depth: 0   # important for PR analysis
 
       - uses: actions/setup-python@v5
         with:
@@ -26,34 +25,15 @@ jobs:
         run: pip install -r requirements.txt
 
       - name: Run tests
-        run: PYTHONPATH=. pytest -q --maxfail=1
+        run: pytest -q --maxfail=1
 
-
-      # (optional) belt-and-suspenders: make sure 'main' is present locally
-      - name: Ensure base branch available
-        run: git fetch origin main:main
-
-      # ⬇️ SonarCloud scan (use the SonarCloud action)
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@v2
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          args: >
-            -Dsonar.organization=sonarefactor
-            -Dsonar.projectKey=sonarefactor_sonarfactor
-            
-      - name: Fetch Sonar issues (optional for your PR summary)
-        env:
-          SONAR_HOST_URL: https://sonarcloud.io
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: python scripts/fetch_sonar_issues.py
+       
 
+      # (optional) your summary step
       - name: Post summary to PR
-        run: python scripts/pr_commenter.py
-
-      - uses: actions/upload-artifact@v4
-        with:
-          name: ci-artifacts
-          path: issues.json
+        run: python scripts/pr_commenter.py || true
