--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
         run: pip install -r requirements.txt
 
       - name: Run tests
-        run: pytest -q --maxfail=1
+        run: PYTHONPATH=. pytest -q --maxfail=1
 
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@v2
