--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          fetch-depth: 0   # important for PR analysis
+          fetch-depth: 0
 
       - uses: actions/setup-python@v5
         with:
@@ -32,30 +32,28 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      
-      
+
       - name: Fetch Sonar issues (API)
         env:
           SONAR_HOST_URL: https://sonarcloud.io
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          SONAR_PROJECT_KEY: akRAMd9_SonaRefactor-Bot  #
+          SONAR_PROJECT_KEY: akRAMd9_SonaRefactor-Bot   # <- your real key
           PR_NUMBER: ${{ github.event.pull_request.number }}
         run: |
           python scripts/fetch_sonar_issues.py
           echo "---- issues.json head ----"
-          python -c "
-import json, os
-p='issues.json'
-print('exists:', os.path.exists(p), 'size:', os.path.getsize(p) if os.path.exists(p) else 0)
-if os.path.exists(p):
-    print(json.dumps(json.load(open(p))[:3], indent=2))  # show first few issues
-"
-PY
+          python - <<'PY'
+          import json, os
+          p = "issues.json"
+          print("exists:", os.path.exists(p), "size:", os.path.getsize(p) if os.path.exists(p) else 0)
+          if os.path.exists(p):
+              print(json.dumps(json.load(open(p))[:3], indent=2))
+          PY
 
-      - name: AI Reviewer (comment-only)
+      - name: AI Reviewer (Gemini, comment-only)
         env:
-          GEMINI_API_KEY: ${{ secrets.LLM_API_KEY }}
-          LLM_MODEL: gemini-2.5-flash
+          GEMINI_API_KEY: ${{ secrets.LLM_API_KEY }}   # <-- use this secret name
+          LLM_MODEL: gemini-2.5-flash                     # safe default
         run: python scripts/llm_reviewer.py
 
       - uses: actions/upload-artifact@v4
@@ -63,7 +61,6 @@ PY
         with:
           name: sonar-issues
           path: issues.json
-
 
       - name: Post summary to PR
         run: python scripts/pr_commenter.py || true
