--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,8 +39,6 @@ jobs:
           echo "Detected sonar.projectKey=$KEY"
           echo "SONAR_PROJECT_KEY=$KEY" >> $GITHUB_ENV
 
-
-
       - name: Fetch Sonar issues (API)
         env:
           SONAR_HOST_URL: https://sonarcloud.io
@@ -74,23 +72,22 @@ jobs:
       - name: Post AI review as PR comment
         if: ${{ github.event.pull_request.number }}
         env:
-         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-         PR_NUMBER: ${{ github.event.pull_request.number }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PR_NUMBER: ${{ github.event.pull_request.number }}
         run: |
-            body="$(tail -n +1 "$GITHUB_STEP_SUMMARY")"
-            if [ -n "$body" ]; then
-             gh api repos/${{ github.repository }}/issues/$PR_NUMBER/comments \
-              -f body="$body" >/dev/null
-            fi
+          if [ -s "$GITHUB_STEP_SUMMARY" ]; then
+            gh api repos/${{ github.repository }}/issues/$PR_NUMBER/comments \
+              --field body<"$GITHUB_STEP_SUMMARY"
+          else
+            echo "No summary to post"
+          fi
 
-      
       - name: Minimal Auto-Fix (Gemini)
         if: github.event_name == 'pull_request'
         env:
           LLM_API_KEY: ${{ secrets.LLM_API_KEY }}
           LLM_MODEL: gemini-2.5-flash
         run: python scripts/llm_autofix_min.py
-
 
       - name: Post summary to PR
         run: python scripts/pr_commenter.py || true
